# euler-dr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Gemfile  LICENSE.md  README.md
cmake/: fetch_mruby.cmake
config/mruby/: config.rb  presym.txt
doc/: error.puml
errors/: last.txt
examples/: explicit_instantiate.cpp  functor_template.cpp  generic_lambda.cpp
logs/: console_history.txt
logs/exceptions/: game_state_-1.txt
sig/euler/: math.rbs
src/: CMakeLists.txt  generate-file.rb
src/euler/: dragonruby.cpp
src/euler/app/: CMakeLists.txt  state.cpp  state.h
src/euler/app/dragonruby/: image.cpp  image.h  logger.cpp  logger.h  mruby_state.cpp  mruby_state.h  renderer.cpp  renderer.h  ruby_state.cpp  ruby_state.h  sample_ext.c  state.cpp  state.h  storage.cpp  storage.h  target.cpp  target.h  window.cpp  window.h
src/euler/app/native/: logger.cpp  logger.h  main.cpp  mruby_state.cpp  mruby_state.h  renderer.cpp  renderer.h  ruby_state.cpp  ruby_state.h  state.cpp  state.h  storage.cpp  storage.h  window.cpp  window.h
src/euler/event/: CMakeLists.txt  event.cpp  event.h
src/euler/file/: CMakeLists.txt  file.cpp  format.cpp  format.h
src/euler/file/format/: json.cpp  json.h  zip.cpp
src/euler/graphics/: CMakeLists.txt  animated_sprite.cpp  animated_sprite.h  basic_sprite.cpp  basic_sprite.h  camera.cpp  camera.h  composite_sprite.cpp  composite_sprite.h  ext.cpp  ext.h  font.cpp  font.h  image.cpp  image.h  nuklear.cpp  nuklear.h  polygon.cpp  polygon.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h  target.cpp  target.h  text.cpp  text.h  user_interface.cpp  user_interface.h  window.cpp  window.h
src/euler/gui/: CMakeLists.txt  button.cpp  button.h  checkbox.cpp  checkbox.h  color_picker.cpp  color_picker.h  common.cpp  common.h  context.cpp  context.h  dropdown.cpp  dropdown.h  element.cpp  element.h  ext.cpp  ext.h  font.cpp  font.h  font_atlas.cpp  font_atlas.h  internal.cpp  internal.h  knob.cpp  knob.h  nuklear.cpp  nuklear.h  progress_bar.cpp  progress_bar.h  radio_button.cpp  radio_button.h  row.cpp  row.h  selectable.cpp  selectable.h  slider.cpp  slider.h  style.cpp  style.h  text.cpp  (+5 more)
src/euler/input/: audio_device_event.cpp  audio_device_event.h  camera_device_event.cpp  camera_device_event.h  clipboard_event.cpp  clipboard_event.h  controller.cpp  controller.h  display_event.cpp  display_event.h  drop_event.cpp  drop_event.h  event.cpp  event.h  gamepad_axis_motion_event.cpp  gamepad_axis_motion_event.h  gamepad_device_event.cpp  gamepad_device_event.h  gamepad_motion_event.cpp  gamepad_motion_event.h  gamepad_sensor_event.cpp  gamepad_sensor_event.h  gamepad_touchpad_event.cpp  gamepad_touchpad_event.h  input.cpp  input.h  joystick_axis_motion_event.cpp  joystick_axis_motion_event.h  joystick_ball_motion_event.cpp  joystick_ball_motion_event.h  joystick_button_event.cpp  joystick_button_event.h  joystick_hat_motion_event.cpp  joystick_hat_motion_event.h  keyboard.cpp  keyboard.h  keyboard_device_event.cpp  keyboard_device_event.h  keyboard_event.cpp  keyboard_event.h  (+38 more)
src/euler/math/: CMakeLists.txt  constants.cpp  constants.h  cube.cpp  cube.h  ext.cpp  ext.h  fixed.cpp  fixed.h  functions.cpp  functions.h  impl.cpp  impl.h  math.cpp  math.h  matrix.cpp  matrix.h  nonscalar.cpp  nonscalar.h  ops.cpp  ops.h  row_vector.cpp  row_vector.h  running_stat.h  running_statistic.cpp  running_statistic.h  size.cpp  size.h  sparse_matrix.cpp  sparse_matrix.h  sparse_solve_factorizer.cpp  sparse_solve_factorizer.h  util.cpp  util.h  vector.cpp  vector.h
src/euler/net/: CMakeLists.txt  authentication_status.cpp  authentication_status.h  config_value.cpp  config_value.h  connection_info.cpp  connection_info.h  connection_real_time_lane_status.cpp  connection_real_time_lane_status.h  connection_real_time_status.cpp  connection_real_time_status.h  connection_signaling.cpp  connection_signaling.h  connection_status_changed_callback.cpp  connection_status_changed_callback.h  ext.cpp  ext.h  fake_udp_port.cpp  fake_udp_port.h  game_id.cpp  game_id.h  identity.cpp  identity.h  identity_render.cpp  identity_render.h  ip_address.cpp  ip_address.h  ip_address_render.cpp  ip_address_render.h  listen_socket.cpp  listen_socket.h  message.cpp  message.h  messages.cpp  messages.h  messages_session_failed.cpp  messages_session_failed.h  messages_session_request.cpp  messages_session_request.h  net_connection.cpp  (+25 more)
src/euler/physics/: CMakeLists.txt  body.cpp  body.h  capsule.cpp  capsule.h  chain.cpp  chain.h  circle.cpp  circle.h  contact.cpp  contact.h  distance_joint.cpp  distance_joint.h  ext.cpp  ext.h  filter_joint.cpp  filter_joint.h  joint.cpp  joint.h  motor_joint.cpp  motor_joint.h  polygon.cpp  polygon.h  prismatic_joint.cpp  prismatic_joint.h  revolute_joint.cpp  revolute_joint.h  segment.cpp  segment.h  shape.cpp  shape.h  util.cpp  util.h  weld_joint.cpp  weld_joint.h  wheel_joint.cpp  wheel_joint.h  world.cpp  world.h
src/euler/runtime/: CMakeLists.txt  dragonruby_state.cpp  dragonruby_state.h  state.cpp  state.h
src/euler/runtime/dragonruby/: mruby_state.cpp  mruby_state.h  state.cpp  state.h
src/euler/util/: CMakeLists.txt  color.cpp  color.h  error.cpp  error.h  ext.cpp  ext.h  font.cpp  font.h  image.cpp  image.h  image_loader.cpp  image_loader.h  logger.cpp  logger.h  math.cpp  math.h  mruby_state.cpp  mruby_state.h  nuklear.h  object.cpp  object.h  pack.cpp  pack.h  ruby_state.cpp  ruby_state.h  state.cpp  state.h  storage.cpp  storage.h  system.cpp  system.h  types.cpp  types.h  version.cpp  version.h  window.cpp  window.h
src/euler/vulkan/: CMakeLists.txt  camera.cpp  camera.h  error.cpp  error.h  internal.cpp  internal.h  renderer.cpp  renderer.h  shader.cpp  shader.h  surface.cpp  surface.h  texture.cpp  texture.h
src/euler/world/: CMakeLists.txt  context.cpp  context.h  definition.cpp  definition.h  level.cpp  level.h  sprite.cpp  sprite.h  world.cpp  world.h
src/euler/world/ldtk/: schema.cpp  schema.h
test/: CMakeLists.txt
tmp/src_backup/: boot.txt  src_backup_changes.html  src_backup_changes.txt
(+12 files in other folders)
