add_library(euler_physics STATIC
        body.cpp
        body.h
        capsule.cpp
        capsule.h
        chain.cpp
        chain.h
        circle.cpp
        circle.h
        contact.cpp
        contact.h
        distance_joint.cpp
        distance_joint.h
        ext.cpp
        ext.h
        filter_joint.cpp
        filter_joint.h
        joint.cpp
        joint.h
        motor_joint.cpp
        motor_joint.h
        polygon.cpp
        polygon.h
        prismatic_joint.cpp
        prismatic_joint.h
        revolute_joint.cpp
        revolute_joint.h
        segment.cpp
        segment.h
        shape.cpp
        shape.h
        weld_joint.cpp
        weld_joint.h
        wheel_joint.cpp
        wheel_joint.h
        world.cpp
        world.h
        util.cpp
        util.h
)